update /hosts/{hostname}/missing-dbs api
